syntax = "proto3";

package gomoku;

service Gomoku {
  rpc Play (stream Request) returns (stream Reply);
}

message Request {
  oneof request {
    LoginRequest login_request = 1;
    FindOpponentRequest find_opponent_request = 2;
    MakeTurnRequest make_turn_request = 3;
  }
}

message LoginRequest {
  string login = 1; 
}

message FindOpponentRequest {
}

message MakeTurnRequest {
  Point point = 1;
}

message Point {
  int32 x = 1;
  int32 y = 2;
}

message Reply {
  oneof reply {
    LoginReply login_reply = 1;
    FindOpponentReply find_opponent_reply = 2;
    ActivePlayerReply active_player_reply = 3;
    MakeTurnReply make_turn_reply = 4;
    EndGameReply end_game_reply = 5;
  }
}

message LoginReply {
  bool success = 1;
}

message FindOpponentReply {
  string login = 1;
}

message ActivePlayerReply {
  bool your_turn = 1;
}

message MakeTurnReply {
  Point point = 1;
  bool your_turn = 2;
}

message EndGameReply {
  OutcomeStatus status = 1;
  repeated Point points = 2;
}

enum OutcomeStatus {
  VICTORY = 1;
  DRAW = 2;
  DEFEAT = 3;
}
